[style][MOD]: Rename all language syntax files to lowercase

--- a/index.less
+++ b/index.less
@@ -9,7 +9,7 @@ author    Arctic Ice Studio                  +
 email     development@arcticicestudio.com    +
 copyright Copyright (C) 2015-2016            +
 created   2015-03-15 20:17 UTC+0100          +
-modified  2016-01-31 11:10 UTC+0100          +
+modified  2016-01-31 23:51 UTC+0100          +
 ++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -154,36 +154,36 @@ LESSCSS            (http://lesscss.org)
 /* +----------------------------------------------------------------------------+
    + Imports - Languages                                                  [1.2] +
    +----------------------------------------------------------------------------+ */
-@import "./styles/languages/C.less";
-@import "./styles/languages/Clojure.less";
-@import "./styles/languages/CoffeeScript.less";
-@import "./styles/languages/CPP.less";
-@import "./styles/languages/CS.less";
-@import "./styles/languages/CSS.less";
-@import "./styles/languages/D.less";
-@import "./styles/languages/GenericConfig.less";
+@import "./styles/languages/c.less";
+@import "./styles/languages/clojure.less";
+@import "./styles/languages/coffeescript.less";
+@import "./styles/languages/cpp.less";
+@import "./styles/languages/cs.less";
+@import "./styles/languages/css.less";
+@import "./styles/languages/d.less";
+@import "./styles/languages/generic-config.less";
+@import "./styles/languages/gfm.less";
 @import "./styles/languages/git.less";
-@import "./styles/languages/GLSL.less";
-@import "./styles/languages/HAML.less";
-@import "./styles/languages/Haskell.less";
-@import "./styles/languages/HTML.less";
-@import "./styles/languages/Jade.less";
-@import "./styles/languages/Java.less";
-@import "./styles/languages/JavaScript.less";
-@import "./styles/languages/JSON.less";
-@import "./styles/languages/Julia.less";
-@import "./styles/languages/LESS.less";
-@import "./styles/languages/Markdown.less";
-@import "./styles/languages/Mustache.less";
-@import "./styles/languages/PHP.less";
-@import "./styles/languages/PropertyList.less";
-@import "./styles/languages/Python.less";
-@import "./styles/languages/R.less";
-@import "./styles/languages/Ruby.less";
-@import "./styles/languages/SASS.less";
-@import "./styles/languages/Shell.less";
-@import "./styles/languages/SQL.less";
-@import "./styles/languages/XML.less";
-@import "./styles/languages/YAML.less";
+@import "./styles/languages/glsl.less";
+@import "./styles/languages/haml.less";
+@import "./styles/languages/haskell.less";
+@import "./styles/languages/html.less";
+@import "./styles/languages/jade.less";
+@import "./styles/languages/java.less";
+@import "./styles/languages/javascript.less";
+@import "./styles/languages/json.less";
+@import "./styles/languages/julia.less";
+@import "./styles/languages/lesscss.less";
+@import "./styles/languages/mustache.less";
+@import "./styles/languages/php.less";
+@import "./styles/languages/property-list.less";
+@import "./styles/languages/python.less";
+@import "./styles/languages/r.less";
+@import "./styles/languages/ruby.less";
+@import "./styles/languages/sass.less";
+@import "./styles/languages/shellscript.less";
+@import "./styles/languages/sql.less";
+@import "./styles/languages/xml.less";
+@import "./styles/languages/yaml.less";
 /* +----------------------------------------------------------------------[1.2]-+ */
 /* +------------------------------------------------------------------------[1]-+ */
