--- a/styles/languages/c.less
+++ b/styles/languages/c.less
@@ -1,33 +1,34 @@
 /*
-+++++++++++++++++++++++++++++++++++++++++++++++++++++
-title     Northem Dark Atom Syntax - Language Julia +
-project   northem-dark-atom-syntax                  +
-file      Julia.less                                +
-version   0.13.0                                    +
-author    Arctic Ice Studio                         +
-email     development@arcticicestudio.com           +
-website   http://arcticicestudio.com                +
-copyright Copyright (C) 2015-2016                   +
-created   2015-03-15 20:17 UTC+0100                 +
-modified  2016-01-31 23:19 UTC+0100                 +
-+++++++++++++++++++++++++++++++++++++++++++++++++++++
++++++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Language C +
+project   northem-dark-atom-syntax              +
+file      c.less                                +
+version   0.13.0                                +
+author    Arctic Ice Studio                     +
+email     development@arcticicestudio.com       +
+website   http://arcticicestudio.com            +
+copyright Copyright (C) 2015-2016               +
+created   2015-08-28 11:42 UTC+0200             +
+modified  2016-01-31 18:11 UTC+0100             +
++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
-This file defines all language specific syntax highlighting classes for Julia.
+This file defines all language specific syntax highlighting classes for C.
 
 [Index]
-  (1) Bracket
-  (2) Comment
-  (3) Constant
-  (4) Entity
-  (5) Keyword
+  (1) Comment
+  (2) Constant
+  (3) Entity
+  (4) Keyword
+  (5) Meta
   (6) Punctuation
   (7) Support
   (8) Storage
   (9) String
+  (10) Variable
 
 [Dependencies]
-  - language-julia@^0.5.0 (https://atom.io/packages/language-julia) by "JuliaLang" (https://atom.io/users/JuliaLang)
+  - language-c@^0.51.1 (https://atom.io/packages/language-c) by "atom" (https://atom.io/users/atom)
 
 [Copyright]
 Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
@@ -57,62 +58,71 @@ Atom Flight Manual
 LESSCSS
   (http://lesscss.org)
 */
-.source.julia {
+.source.c {
   color: @color-syntax-other;
   /* +----------------------------------------------------------------------------+
-     + Bracket                                                                [1] +
-     +----------------------------------------------------------------------------+ */
-  .bracket {
-    color: @color-syntax-symbol;
-  }
-  /* +------------------------------------------------------------------------[1]-+ */
-
-  /* +----------------------------------------------------------------------------+
-     + Comment                                                                [2] +
+     + Comment                                                                [1] +
      +----------------------------------------------------------------------------+ */
   .comment {
     color: @color-syntax-comment;
   }
-  /* +------------------------------------------------------------------------[2]-+ */
+  /* +------------------------------------------------------------------------[1]-+ */
 
   /* +----------------------------------------------------------------------------+
-     + Constant                                                               [3] +
+     + Constant                                                               [2] +
      +----------------------------------------------------------------------------+ */
   .constant {
     &.numeric {
       color: @color-syntax-number;
     }
     &.character.escape {
-    color: @color-syntax-escape;
+      color: @color-syntax-escape;
     }
     &.language {
-      color: @color-syntax-constant;
+      color: @color-syntax-keyword;
     }
   }
-  /* +------------------------------------------------------------------------[3]-+ */
+  /* +------------------------------------------------------------------------[2]-+ */
 
   /* +----------------------------------------------------------------------------+
-     + Enity                                                                  [4] +
+     + Enity                                                                  [3] +
      +----------------------------------------------------------------------------+ */
   .entity.name.function {
     color: @color-syntax-function;
   }
+  /* +------------------------------------------------------------------------[3]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Keyword                                                                [4] +
+     +----------------------------------------------------------------------------+ */
+  .keyword.control {
+    color: @color-syntax-keyword;
+
+    &.import {
+      &.include,
+      &.define {
+        color: @color-syntax-c-preprocessor;
+        font-weight: bold;
+      }
+    }
+  }
   /* +------------------------------------------------------------------------[4]-+ */
 
   /* +----------------------------------------------------------------------------+
-     + Keyword                                                                [5] +
+     + Meta                                                                   [5] +
      +----------------------------------------------------------------------------+ */
-  .keyword {
-    &.other,
-    &.control {
-      color: @color-syntax-keyword;
-    }
-    &.operator {
-      &.ternary,
-      &.arithmetic,
-      &.update {
-        color: @color-syntax-operator;
+  .meta {
+    &.preprocessor {
+      &.macro {
+        color: @color-syntax-other;
       }
+      &.c.include {
+        color: @color-syntax-keyword;
+      }
+    }
+    &.block,
+    &.parens {
+      color: @color-syntax-other;
     }
   }
   /* +------------------------------------------------------------------------[5]-+ */
@@ -120,13 +130,28 @@ LESSCSS
   /* +----------------------------------------------------------------------------+
      + Punctuation                                                            [6] +
      +----------------------------------------------------------------------------+ */
-  .punctuation.definition {
-    &.commment {
-      color: @color-syntax-comment;
+  .punctuation {
+    &.definition {
+      &.string.begin,
+      &.string.end,
+      &.parameters {
+        color: @color-syntax-symbol;
+      }
     }
-    &.string {
-      &.begin
-       &.end {
+    &.section {
+      &.block,
+      &.parens {
+        &.begin,
+        &.end {
+          color: @color-syntax-symbol;
+        }
+      }
+    }
+    &.separator {
+      &.continuation {
+        color: @color-syntax-escape;
+      }
+      &.parameters {
         color: @color-syntax-symbol;
       }
     }
@@ -136,11 +161,15 @@ LESSCSS
   /* +----------------------------------------------------------------------------+
      + Support                                                                [7] +
      +----------------------------------------------------------------------------+ */
-  .support.function {
-    color: @color-syntax-function;
-
-    &.macro {
-      font-weight: bold;
+  .support {
+    &.type.sys-types {
+      color: @color-syntax-class;
+    }
+    &.function {
+      &.any-method,
+      &.C99 {
+        color: @color-syntax-function;
+      }
     }
   }
   /* +------------------------------------------------------------------------[7]-+ */
@@ -149,18 +178,23 @@ LESSCSS
      + Storage                                                                [8] +
      +----------------------------------------------------------------------------+ */
   .storage.type {
-    color: @color-syntax-type;
+    color: @color-syntax-class;
   }
   /* +------------------------------------------------------------------------[8]-+ */
 
   /* +----------------------------------------------------------------------------+
      + String                                                                 [9] +
      +----------------------------------------------------------------------------+ */
-  .string.qouted {
-    &.Double,
-    &.single {
-      color: @color-syntax-string;
-    }
+  .string {
+    color: @color-syntax-string;
   }
   /* +------------------------------------------------------------------------[9]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Variable                                                              [10] +
+     +----------------------------------------------------------------------------+ */
+  .variable.parameter {
+    color: @color-syntax-variable;
+  }
+  /* +-----------------------------------------------------------------------[10]-+ */
 }
