--- a/styles/languages/javascript.less
+++ b/styles/languages/javascript.less
@@ -2,7 +2,7 @@
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 title     Northem Dark Atom Syntax - Language JavaScript +
 project   northem-dark-atom-syntax                       +
-file      JavaScript.less                                +
+file      javascript.less                                +
 version   0.13.0                                         +
 author    Arctic Ice Studio                              +
 email     development@arcticicestudio.com                +
