--- a/styles/languages/php.less
+++ b/styles/languages/php.less
@@ -2,7 +2,7 @@
 +++++++++++++++++++++++++++++++++++++++++++++++++++
 title     Northem Dark Atom Syntax - Language PHP +
 project   northem-dark-atom-syntax                +
-file      PHP.less                                +
+file      php.less                                +
 version   0.13.0                                  +
 author    Arctic Ice Studio                       +
 email     development@arcticicestudio.com         +
