--- a/styles/languages/sass.less
+++ b/styles/languages/sass.less
@@ -2,7 +2,7 @@
 ++++++++++++++++++++++++++++++++++++++++++++++++++++
 title     Northem Dark Atom Syntax - Language Sass +
 project   northem-dark-atom-syntax                 +
-file      Sass.less                                +
+file      sass.less                                +
 version   0.13.0                                   +
 author    Arctic Ice Studio                        +
 email     development@arcticicestudio.com          +
