--- a/styles/languages/xml.less
+++ b/styles/languages/xml.less
@@ -2,7 +2,7 @@
 +++++++++++++++++++++++++++++++++++++++++++++++++++
 title     Northem Dark Atom Syntax - Language XML +
 project   northem-dark-atom-syntax                +
-file      XML.less                                +
+file      xml.less                                +
 version   0.13.0                                  +
 author    Arctic Ice Studio                       +
 email     development@arcticicestudio.com         +
