--- a/styles/languages/yaml.less
+++ b/styles/languages/yaml.less
@@ -2,7 +2,7 @@
 ++++++++++++++++++++++++++++++++++++++++++++++++++++
 title     Northem Dark Atom Syntax - Language YAML +
 project   northem-dark-atom-syntax                 +
-file      YAML.less                                +
+file      yaml.less                                +
 version   0.13.0                                   +
 author    Arctic Ice Studio                        +
 email     development@arcticicestudio.com          +
