--- a/styles/languages/clojure.less
+++ b/styles/languages/clojure.less
@@ -1,30 +1,32 @@
 /*
-++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
-title     Northem Dark Atom Syntax - Language GitHub Flavored Markdown +
-project   northem-dark-atom-syntax                                     +
-file      GitHub Flavored Markdown.less                                +
-version   0.13.0                                                       +
-author    Arctic Ice Studio                                            +
-email     development@arcticicestudio.com                              +
-website   http://arcticicestudio.com                                   +
-copyright Copyright (C) 2015-2016                                      +
-created   2015-03-15 20:17 UTC+0100                                    +
-modified  2016-01-31 23:24 UTC+0100                                    +
-++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Language Clojure +
+project   northem-dark-atom-syntax                    +
+file      clojure.less                                +
+version   0.13.0                                      +
+author    Arctic Ice Studio                           +
+email     development@arcticicestudio.com             +
+website   http://arcticicestudio.com                  +
+copyright Copyright (C) 2015-2016                     +
+created   2015-08-28 12:07 UTC+0200                   +
+modified  2016-01-31 18:13 UTC+0100                   +
++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
-This file defines all language specific syntax highlighting classes for GitHub Flavored Markdown.
+This file defines all language specific syntax highlighting classes for Clojure.
 
 [Index]
   (1) Comment
-  (2) Entity
-  (3) Markup
-  (4) Punctuation
-  (5) Support
-  (6) Variable
+  (2) Constant
+  (3) Entity
+  (4) Keyword
+  (5) Meta
+  (6) Punctuation
+  (7) Storage
+  (8) String
 
 [Dependencies]
-  - language-gfm@^0.82.0 (https://atom.io/packages/language-gfm) by "atom" (https://atom.io/users/atom)
+  - language-clojure@^0.19.0 (https://atom.io/packages/language-clojure) by "atom" (https://atom.io/users/atom)
 
 [Copyright]
 Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
@@ -54,95 +56,91 @@ Atom Flight Manual
 LESSCSS
   (http://lesscss.org)
 */
-.source.gfm {
-  color: @color-editor-text;
-  -webkit-font-smoothing: auto;
+.source.clojure {
+  color: @color-syntax-other;
   /* +----------------------------------------------------------------------------+
      + Comment                                                                [1] +
      +----------------------------------------------------------------------------+ */
   .comment {
-    &.quote {
-      color: @color-editor-text;
-      font-style: italic;
-    }
-    &.hr {
-      color: @color-syntax-class;
-    }
+    color: @color-syntax-comment;
   }
   /* +------------------------------------------------------------------------[1]-+ */
 
   /* +----------------------------------------------------------------------------+
-     + Enity                                                                  [2] +
+     + Constant                                                               [2] +
      +----------------------------------------------------------------------------+ */
-  .entity {
-    color: @color-syntax-keyword;
+  .constant {
+    &.keyword,
+    &.language {
+      color: @color-syntax-keyword;
+    }
+    &.numeric {
+      color: @color-syntax-number;
+    }
   }
   /* +------------------------------------------------------------------------[2]-+ */
 
   /* +----------------------------------------------------------------------------+
-     + Markup                                                                 [3] +
+     + Enity                                                                  [3] +
      +----------------------------------------------------------------------------+ */
-  .markup {
-    &.heading {
-      color: @color-syntax-keyword;
-      font-weight: bold;
+  .entity {
+    &.name.function {
+      color: @color-syntax-function;
     }
-    &.underline {
-      text-decoration: underline;
-
-      &.link {
-        color: @color-syntax-markdown-link;
-      }
-    }
-    &.bold,
-    &.italic  {
-      color: @color-syntax-string;
-    }
-    &.raw {
-      color: @color-syntax-keyword;
-      font-style: italic;
-    }
-    &.changed {
-      color: @color-git-diff-modified;
-    }
-    &.deleted {
-      color: @color-git-diff-removed;
+    &.global {
+      color: @color-syntax-class;
     }
   }
   /* +------------------------------------------------------------------------[3]-+ */
 
   /* +----------------------------------------------------------------------------+
-     + Punctuation                                                            [4] +
+     + Keyword                                                                [4] +
      +----------------------------------------------------------------------------+ */
-  .punctation {
-    &.definition.begin,
-    &.definition.end,
-    &.seperator {
-      color: @color-syntax-symbol;
-    }
+  .keyword.control {
+    color: @color-syntax-keyword;
   }
   /* +------------------------------------------------------------------------[4]-+ */
 
   /* +----------------------------------------------------------------------------+
-     + Support                                                                [5] +
+     + Meta                                                                   [5] +
      +----------------------------------------------------------------------------+ */
-  .support {
-    color: @color-syntax-markdown-code;
-
-    &.quote {
+  .meta {
+    &.symbol {
       color: @color-syntax-class;
+    }
+    &.vector {
+      color: @color-syntax-symbol;
     }
   }
   /* +------------------------------------------------------------------------[5]-+ */
 
   /* +----------------------------------------------------------------------------+
-     + Variable                                                              [6] +
+     + Punctuation                                                            [6] +
      +----------------------------------------------------------------------------+ */
-  .variable {
-    &.unordered.list,
-    &.ordered.list {
-      color: @color-syntax-class;
+  .punctuation {
+    &.definition.string,
+    &.section.expression {
+      &.begin,
+      &.end {
+        color: @color-syntax-symbol;
+      }
     }
   }
   /* +------------------------------------------------------------------------[6]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Storage                                                                [7] +
+     +----------------------------------------------------------------------------+ */
+  .storage.control {
+    color: @color-syntax-keyword;
+  }
+  /* +------------------------------------------------------------------------[7]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + String                                                                 [8] +
+     +----------------------------------------------------------------------------+ */
+  .string {
+    color: @color-syntax-string;
+  }
+  /* +------------------------------------------------------------------------[8]-+ */
 }
