--- a/styles/languages/jade.less
+++ b/styles/languages/jade.less
@@ -2,7 +2,7 @@
 ++++++++++++++++++++++++++++++++++++++++++++++++++++
 title     Northem Dark Atom Syntax - Language Jade +
 project   northem-dark-atom-syntax                 +
-file      Jade.less                                +
+file      jade.less                                +
 version   0.13.0                                   +
 author    Arctic Ice Studio                        +
 email     development@arcticicestudio.com          +
