--- a/styles/languages/json.less
+++ b/styles/languages/json.less
@@ -2,7 +2,7 @@
 ++++++++++++++++++++++++++++++++++++++++++++++++++++
 title     Northem Dark Atom Syntax - Language JSON +
 project   northem-dark-atom-syntax                 +
-file      JSON.less                                +
+file      json.less                                +
 version   0.13.0                                   +
 author    Arctic Ice Studio                        +
 email     development@arcticicestudio.com          +
