--- a/styles/languages/lesscss.less
+++ b/styles/languages/lesscss.less
@@ -1,19 +1,19 @@
 /*
-++++++++++++++++++++++++++++++++++++++++++++++++++++++
-title     Northem Dark Atom Syntax - Language Python +
-project   northem-dark-atom-syntax                   +
-file      Python.less                                +
-version   0.13.0                                     +
-author    Arctic Ice Studio                          +
-email     development@arcticicestudio.com            +
-website   http://arcticicestudio.com                 +
-copyright Copyright (C) 2015-2016                    +
-created   2015-03-15 20:17 UTC+0100                  +
-modified  2016-01-31 23:33 UTC+0100                  +
-++++++++++++++++++++++++++++++++++++++++++++++++++++++
++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Language LESSCSS +
+project   northem-dark-atom-syntax                    +
+file      lesscss.less                                +
+version   0.13.0                                      +
+author    Arctic Ice Studio                           +
+email     development@arcticicestudio.com             +
+website   http://arcticicestudio.com                  +
+copyright Copyright (C) 2015-2016                     +
+created   2015-03-15 20:17 UTC+0100                   +
+modified  2016-01-31 23:22 UTC+0100                   +
++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
-This file defines all language specific syntax highlighting classes for Python.
+This file defines all language specific syntax highlighting classes for LESSCSS.
 
 [Index]
   (1) Comment
@@ -23,12 +23,11 @@ This file defines all language specific syntax highlighting classes for Python.
   (5) Meta
   (6) Punctuation
   (7) Support
-  (8) Storage
-  (9) String
-  (10) Variable
+  (8) String
+  (9) Variable
 
 [Dependencies]
-  - language-python@^0.42.1 (https://atom.io/packages/language-python) by "atom" (https://atom.io/users/atom)
+  - language-less@^0.29.0 (https://atom.io/packages/language-less) by "atom" (https://atom.io/users/atom)
 
 [Copyright]
 Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
@@ -58,7 +57,7 @@ Atom Flight Manual
 LESSCSS
   (http://lesscss.org)
 */
-.source.python {
+.source.less {
   color: @color-syntax-other;
   /* +----------------------------------------------------------------------------+
      + Comment                                                                [1] +
@@ -71,38 +70,59 @@ LESSCSS
   /* +----------------------------------------------------------------------------+
      + Constant                                                               [2] +
      +----------------------------------------------------------------------------+ */
-  .constant.numeric {
-    color: @color-syntax-number;
+  .constant {
+    color: @color-syntax-constant;
+    font-weight: bold;
+
+    &.numeric,
+    &.other.rgb-value {
+      color: @color-syntax-number;
+      font-weight: normal;
+    }
   }
   /* +------------------------------------------------------------------------[2]-+ */
 
   /* +----------------------------------------------------------------------------+
      + Enity                                                                  [3] +
      +----------------------------------------------------------------------------+ */
-  .entity.name.function {
-    color: @color-syntax-function;
+  .entity.other.attribute-name {
+    &.class,
+    &.id {
+      color: @color-syntax-class;
+    }
   }
+
   /* +------------------------------------------------------------------------[3]-+ */
 
   /* +----------------------------------------------------------------------------+
      + Keyword                                                                [4] +
      +----------------------------------------------------------------------------+ */
   .keyword {
-    &.other {
-      color: @color-syntax-keyword;
-    }
-    &.control {
-      color: @color-syntax-keyword;
-
-      &.import {
-        color: @color-syntax-import;
-      }
-      &.statement {
-        color: @color-syntax-keyword;
-      }
-    }
     &.operator {
       color: @color-syntax-operator;
+    }
+    &.control {
+      color: @color-syntax-function;
+
+      &.at-rule {
+        &.fontface,
+        &.import,
+        &.page,
+        &.media {
+          color: @color-syntax-css-at-rule;
+          font-weight: bold;
+        }
+      }
+      &.logical.operator {
+        color: @color-syntax-operator;
+      }
+    }
+    &.other {
+      color: @color-syntax-keyword;
+
+      &.unit {
+        color: @color-syntax-unit;
+      }
     }
   }
   /* +------------------------------------------------------------------------[4]-+ */
@@ -111,12 +131,11 @@ LESSCSS
      + Meta                                                                   [5] +
      +----------------------------------------------------------------------------+ */
   .meta {
-    &.function-call {
-      color: @color-syntax-function;
-
-      &.arguments {
-        color: @color-syntax-variable;
-      }
+    &.property-list {
+      color: @color-syntax-keyword;
+    }
+    &.brace {
+      color: @color-syntax-symbol;
     }
   }
   /* +------------------------------------------------------------------------[5]-+ */
@@ -125,25 +144,23 @@ LESSCSS
      + Punctuation                                                            [6] +
      +----------------------------------------------------------------------------+ */
   .punctuation {
+    &.terminator,
+    &.seperator,
+    &.section.property-list {
+      color: @color-syntax-symbol;
+    }
     &.definition {
-      &.string {
-        color: @color-syntax-symbol;
-      }
-      &.parameters,
-      &.arguments,
-      &.list {
-        &.begin,
-        &.end {
-          color: @color-syntax-symbol;
-        }
-      }
       &.comment {
         color: @color-syntax-comment;
       }
-    }
-    &.seperator,
-    &.section {
-      color: @color-syntax-symbol;
+      &.keyword {
+        color: @color-syntax-keyword;
+        font-weight: normal;
+      }
+      &.entity,
+      &.string {
+        color: @color-syntax-symbol;
+      }
     }
   }
   /* +------------------------------------------------------------------------[6]-+ */
@@ -152,36 +169,40 @@ LESSCSS
      + Support                                                                [7] +
      +----------------------------------------------------------------------------+ */
   .support {
-    &.type {
+    &.type.property-name {
       color: @color-syntax-keyword;
     }
     &.function {
       color: @color-syntax-function;
+
+      &.any-method.builtin {
+        color: @color-syntax-function;
+      }
+    }
+    &.constant.color.w3c-standard-color-name {
+      color: @color-syntax-constant;
+      font-weight: bold;
     }
   }
   /* +------------------------------------------------------------------------[7]-+ */
 
   /* +----------------------------------------------------------------------------+
-     + Storage                                                                [8] +
+     + String                                                                 [8] +
      +----------------------------------------------------------------------------+ */
-  .storage.type.function {
-    color: @color-syntax-keyword;
+  .string {
+    color: @color-syntax-string;
   }
   /* +------------------------------------------------------------------------[8]-+ */
 
   /* +----------------------------------------------------------------------------+
-     + String                                                                 [9] +
+     + Variable                                                              [9] +
      +----------------------------------------------------------------------------+ */
-  .string.quoted {
-    color: @color-syntax-string;
+  .variable {
+    color: @color-syntax-variable;
+
+    &.other {
+      color: @color-syntax-variable;
+    }
   }
   /* +------------------------------------------------------------------------[9]-+ */
-
-  /* +----------------------------------------------------------------------------+
-     + Variable                                                              [10] +
-     +----------------------------------------------------------------------------+ */
-  .variable.parameter.function {
-    color: @color-syntax-variable;
-  }
-  /* +-----------------------------------------------------------------------[10]-+ */
 }
