--- a/styles/languages/python.less
+++ b/styles/languages/python.less
@@ -1,19 +1,19 @@
 /*
-+++++++++++++++++++++++++++++++++++++++++++++++++++++++
-title     Northem Dark Atom Syntax - Language Haskell +
-project   northem-dark-atom-syntax                    +
-file      Haskell.less                                +
-version   0.13.0                                      +
-author    Arctic Ice Studio                           +
-email     development@arcticicestudio.com             +
-website   http://arcticicestudio.com                  +
-copyright Copyright (C) 2015-2016                     +
-created   2015-08-01 10:18 UTC+0200                   +
-modified  2016-01-31 18:59 UTC+0100                   +
-+++++++++++++++++++++++++++++++++++++++++++++++++++++++
+++++++++++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Language Python +
+project   northem-dark-atom-syntax                   +
+file      python.less                                +
+version   0.13.0                                     +
+author    Arctic Ice Studio                          +
+email     development@arcticicestudio.com            +
+website   http://arcticicestudio.com                 +
+copyright Copyright (C) 2015-2016                    +
+created   2015-03-15 20:17 UTC+0100                  +
+modified  2016-01-31 23:33 UTC+0100                  +
+++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
-This file defines all language specific syntax highlighting classes for Haskell.
+This file defines all language specific syntax highlighting classes for Python.
 
 [Index]
   (1) Comment
@@ -25,9 +25,10 @@ This file defines all language specific syntax highlighting classes for Haskell.
   (7) Support
   (8) Storage
   (9) String
+  (10) Variable
 
 [Dependencies]
-  - language-haskell@^1.5.2 (https://atom.io/packages/language-haskell) by "atom-haskell" (https://atom.io/users/atom-haskell)
+  - language-python@^0.42.1 (https://atom.io/packages/language-python) by "atom" (https://atom.io/users/atom)
 
 [Copyright]
 Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
@@ -57,18 +58,13 @@ Atom Flight Manual
 LESSCSS
   (http://lesscss.org)
 */
-.source.haskell {
+.source.python {
   color: @color-syntax-other;
   /* +----------------------------------------------------------------------------+
      + Comment                                                                [1] +
      +----------------------------------------------------------------------------+ */
   .comment {
     color: @color-syntax-comment;
-    font-weight: normal;
-
-    &.line.shebang {
-      color: @color-syntax-haskell-preprocessor;
-    }
   }
   /* +------------------------------------------------------------------------[1]-+ */
 
@@ -83,18 +79,8 @@ LESSCSS
   /* +----------------------------------------------------------------------------+
      + Enity                                                                  [3] +
      +----------------------------------------------------------------------------+ */
-  .entity.name {
-    &.type,
-    &.tag  {
-      color: @color-syntax-class;
-    }
-    &.function {
-      color: @color-syntax-function;
-
-      &.infix {
-        color: @color-syntax-function;
-      }
-    }
+  .entity.name.function {
+    color: @color-syntax-function;
   }
   /* +------------------------------------------------------------------------[3]-+ */
 
@@ -102,28 +88,21 @@ LESSCSS
      + Keyword                                                                [4] +
      +----------------------------------------------------------------------------+ */
   .keyword {
-    &.operator {
-      color: @color-syntax-operator;
-
-      &.assignment {
-        color: @color-syntax-operator;
-      }
-      &.function.infix {
-        color: @color-syntax-function;
-      }
-    }
     &.other {
       color: @color-syntax-keyword;
+    }
+    &.control {
+      color: @color-syntax-keyword;
 
-      &.arrow,
-      &.double-colon {
-        color: @color-syntax-operator;
+      &.import {
+        color: @color-syntax-import;
+      }
+      &.statement {
+        color: @color-syntax-keyword;
       }
     }
-
-    &.control.import {
-      color: @color-syntax-haskell-preprocessor;
-      font-weight: bold;
+    &.operator {
+      color: @color-syntax-operator;
     }
   }
   /* +------------------------------------------------------------------------[4]-+ */
@@ -132,24 +111,12 @@ LESSCSS
      + Meta                                                                   [5] +
      +----------------------------------------------------------------------------+ */
   .meta {
-    &.preprocessor {
-      color: @color-syntax-haskell-preprocessor;
+    &.function-call {
+      color: @color-syntax-function;
 
-      .keyword.other {
-        color: @color-syntax-keyword;
+      &.arguments {
+        color: @color-syntax-variable;
       }
-    }
-    &.declaration.exports {
-      color: @color-syntax-symbol;
-    }
-    &.type-signature {
-
-      .keyword.operator {
-        color: @color-syntax-operator;
-      }
-    }
-    &.other.constructor-list {
-      color: @color-syntax-variable;
     }
   }
   /* +------------------------------------------------------------------------[5]-+ */
@@ -158,13 +125,25 @@ LESSCSS
      + Punctuation                                                            [6] +
      +----------------------------------------------------------------------------+ */
   .punctuation {
-    &.separator.comma,
     &.definition {
-      &.entity,
-      &.string.begin,
-      &.string.end {
+      &.string {
         color: @color-syntax-symbol;
       }
+      &.parameters,
+      &.arguments,
+      &.list {
+        &.begin,
+        &.end {
+          color: @color-syntax-symbol;
+        }
+      }
+      &.comment {
+        color: @color-syntax-comment;
+      }
+    }
+    &.seperator,
+    &.section {
+      color: @color-syntax-symbol;
     }
   }
   /* +------------------------------------------------------------------------[6]-+ */
@@ -173,18 +152,11 @@ LESSCSS
      + Support                                                                [7] +
      +----------------------------------------------------------------------------+ */
   .support {
-    &.other.module {
-      color: @color-syntax-class;
-      font-weight: bold;
-    }
-    &.class.prelude {
-      color: @color-syntax-class;
-    }
-    &.function.prelude {
-      color: @color-syntax-function;
-    }
-    &.tag {
+    &.type {
       color: @color-syntax-keyword;
+    }
+    &.function {
+      color: @color-syntax-function;
     }
   }
   /* +------------------------------------------------------------------------[7]-+ */
@@ -192,7 +164,7 @@ LESSCSS
   /* +----------------------------------------------------------------------------+
      + Storage                                                                [8] +
      +----------------------------------------------------------------------------+ */
-  .storage.type.data {
+  .storage.type.function {
     color: @color-syntax-keyword;
   }
   /* +------------------------------------------------------------------------[8]-+ */
@@ -201,10 +173,15 @@ LESSCSS
      + String                                                                 [9] +
      +----------------------------------------------------------------------------+ */
   .string.quoted {
-    &.single,
-    &.double {
-      color: @color-syntax-string;
-    }
+    color: @color-syntax-string;
   }
   /* +------------------------------------------------------------------------[9]-+ */
+
+  /* +----------------------------------------------------------------------------+
+     + Variable                                                              [10] +
+     +----------------------------------------------------------------------------+ */
+  .variable.parameter.function {
+    color: @color-syntax-variable;
+  }
+  /* +-----------------------------------------------------------------------[10]-+ */
 }
