--- a/styles/languages/r.less
+++ b/styles/languages/r.less
@@ -1,34 +1,31 @@
 /*
 +++++++++++++++++++++++++++++++++++++++++++++++++
-title     Northem Dark Atom Syntax - Language D +
+title     Northem Dark Atom Syntax - Language R +
 project   northem-dark-atom-syntax              +
-file      D.less                                +
+file      r.less                                +
 version   0.13.0                                +
 author    Arctic Ice Studio                     +
 email     development@arcticicestudio.com       +
 website   http://arcticicestudio.com            +
 copyright Copyright (C) 2015-2016               +
-created   2015-08-14 14:23 UTC+0200             +
-modified  2016-01-31 18:34 UTC+0100             +
+created   2015-08-14 15:42 UTC+0200             +
+modified  2016-01-31 23:35 UTC+0100             +
 +++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
-This file defines all language specific syntax highlighting classes for D.
+This file defines all language specific syntax highlighting classes for R.
 
 [Index]
   (1) Comment
   (2) Constant
   (3) Entity
   (4) Keyword
-  (5) Meta
-  (6) Punctuation
-  (7) Support
-  (8) Storage
-  (9) String
-  (10) Variable
+  (5) Punctuation
+  (6) String
+  (7) Variable
 
 [Dependencies]
-  - language-d@^3.2.3 (https://atom.io/packages/language-d) by "amehat" (https://atom.io/users/amehat)
+  - language-foobar@^0.4.0 (https://atom.io/packages/language-foobar) by "lee-dohm " (https://atom.io/users/lee-dohm)
 
 [Copyright]
 Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
@@ -58,7 +55,7 @@ Atom Flight Manual
 LESSCSS
   (http://lesscss.org)
 */
-.source.d {
+.source.r {
   color: @color-syntax-other;
   /* +----------------------------------------------------------------------------+
      + Comment                                                                [1] +
@@ -75,8 +72,11 @@ LESSCSS
     &.numeric {
       color: @color-syntax-number;
     }
+    &.language {
+      color: @color-syntax-constant;
+    }
     &.character.escape {
-      color: @color-syntax-escape;
+      color: @color-syntax-regexp;
     }
   }
   /* +------------------------------------------------------------------------[2]-+ */
@@ -84,14 +84,8 @@ LESSCSS
   /* +----------------------------------------------------------------------------+
      + Enity                                                                  [3] +
      +----------------------------------------------------------------------------+ */
-  .entity.name {
-    &.function {
-      color: @color-syntax-function;
-    }
-    &.class {
-      color: @color-syntax-class;
-      font-weight: bold;
-    }
+  .entity.name.function {
+    color: @color-syntax-function;
   }
   /* +------------------------------------------------------------------------[3]-+ */
 
@@ -100,117 +94,52 @@ LESSCSS
      +----------------------------------------------------------------------------+ */
   .keyword {
     &.operator {
-      &.logical,
-      &.arithmetic,
       &.assignment,
-      &.concatenation,
-      &.bitwise,
+      &.arithmetic,
+      &.logical,
       &.comparison {
         color: @color-syntax-operator;
-      }
-      &.dereference {
-        color: @color-syntax-symbol;
       }
     }
     &.control {
       color: @color-syntax-keyword;
-
-      &.loop,
-      &.branch {
-        color: @color-syntax-keyword;
-      }
     }
     &.other {
-      color: @color-syntax-keyword;
-
-      &.import {
-        color: @color-syntax-import;
-        font-weight: bold;
-      }
+      color: @color-syntax-operator;
     }
   }
   /* +------------------------------------------------------------------------[4]-+ */
 
   /* +----------------------------------------------------------------------------+
-     + Meta                                                                   [5] +
+     + Punctuation                                                            [5] +
      +----------------------------------------------------------------------------+ */
-  .meta.function.parameters {
-    color: @color-syntax-variable;
+  .punctuation {
+    &.definition.string,
+    &.section {
+      &.begin,
+      &.end {
+        color: @color-syntax-string;
+      }
+    }
   }
   /* +------------------------------------------------------------------------[5]-+ */
 
   /* +----------------------------------------------------------------------------+
-     + Punctuation                                                            [6] +
-     +----------------------------------------------------------------------------+ */
-  .punctuation {
-    &.separator, {
-    &.comma
-      color: @color-syntax-symbol;
-    }
-    &.terminator {
-      color: @color-syntax-keyword;
-    }
-    &.section.block,
-    &.definition.string {
-      &.begin,
-      &.end {
-        color: @color-syntax-symbol;
-      }
-    }
-  }
-  /* +------------------------------------------------------------------------[6]-+ */
-
-  /* +----------------------------------------------------------------------------+
-     + Support                                                                [7] +
-     +----------------------------------------------------------------------------+ */
-  .support.other.module {
-    color: @color-syntax-class;
-  }
-  /* +------------------------------------------------------------------------[7]-+ */
-
-  /* +----------------------------------------------------------------------------+
-     + Storage                                                                [8] +
-     +----------------------------------------------------------------------------+ */
-  .storage {
-    &.type {
-      &.return {
-        color: @color-syntax-keyword;
-      }
-      &.primitive,
-      &.class {
-        color: @color-syntax-class;
-      }
-    }
-    &.modifier {
-      color: @color-syntax-keyword;
-
-      &.protection {
-        color: @color-syntax-keyword;
-      }
-    }
-  }
-  /* +------------------------------------------------------------------------[8]-+ */
-
-  /* +----------------------------------------------------------------------------+
-     + String                                                                 [9] +
+     + String                                                                 [6] +
      +----------------------------------------------------------------------------+ */
   .string {
     color: @color-syntax-string;
   }
-  /* +------------------------------------------------------------------------[9]-+ */
+  /* +------------------------------------------------------------------------[6]-+ */
 
   /* +----------------------------------------------------------------------------+
-     + Variable                                                              [10] +
+     + Variable                                                               [7] +
      +----------------------------------------------------------------------------+ */
   .variable {
-    color: @color-syntax-variable;
-
-    &.language{
-      color: @color-syntax-keyword;
-    }
+    &.other,
     &.parameter {
       color: @color-syntax-variable;
     }
   }
-  /* +-----------------------------------------------------------------------[10]-+ */
+  /* +------------------------------------------------------------------------[7]-+ */
 }
