--- a/styles/languages/ruby.less
+++ b/styles/languages/ruby.less
@@ -1,34 +1,33 @@
 /*
-+++++++++++++++++++++++++++++++++++++++++++++++++
-title     Northem Dark Atom Syntax - Language C +
-project   northem-dark-atom-syntax              +
-file      C.less                                +
-version   0.13.0                                +
-author    Arctic Ice Studio                     +
-email     development@arcticicestudio.com       +
-website   http://arcticicestudio.com            +
-copyright Copyright (C) 2015-2016               +
-created   2015-08-28 11:42 UTC+0200             +
-modified  2016-01-31 18:11 UTC+0100             +
-+++++++++++++++++++++++++++++++++++++++++++++++++
+++++++++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Language Ruby +
+project   northem-dark-atom-syntax                 +
+file      ruby.less                                +
+version   0.13.0                                   +
+author    Arctic Ice Studio                        +
+email     development@arcticicestudio.com          +
+website   http://arcticicestudio.com               +
+copyright Copyright (C) 2015-2016                  +
+created   2015-03-15 20:17 UTC+0100                +
+modified  2016-01-31 23:37 UTC+0100                +
+++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
-This file defines all language specific syntax highlighting classes for C.
+This file defines all language specific syntax highlighting classes for Ruby.
 
 [Index]
   (1) Comment
   (2) Constant
   (3) Entity
   (4) Keyword
-  (5) Meta
-  (6) Punctuation
-  (7) Support
-  (8) Storage
-  (9) String
-  (10) Variable
+  (5) Punctuation
+  (6) Support
+  (7) String
+  (8) Symbol
+  (9) Variable
 
 [Dependencies]
-  - language-c@^0.51.1 (https://atom.io/packages/language-c) by "atom" (https://atom.io/users/atom)
+  - language-ruby@^0.65.0 (https://atom.io/packages/language-ruby) by "atom" (https://atom.io/users/atom)
 
 [Copyright]
 Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
@@ -58,7 +57,7 @@ Atom Flight Manual
 LESSCSS
   (http://lesscss.org)
 */
-.source.c {
+.source.ruby {
   color: @color-syntax-other;
   /* +----------------------------------------------------------------------------+
      + Comment                                                                [1] +
@@ -75,13 +74,14 @@ LESSCSS
     &.numeric {
       color: @color-syntax-number;
     }
-    &.character.escape {
+    &.escape {
       color: @color-syntax-escape;
     }
     &.language {
       color: @color-syntax-keyword;
     }
   }
+
   /* +------------------------------------------------------------------------[2]-+ */
 
   /* +----------------------------------------------------------------------------+
@@ -95,106 +95,86 @@ LESSCSS
   /* +----------------------------------------------------------------------------+
      + Keyword                                                                [4] +
      +----------------------------------------------------------------------------+ */
-  .keyword.control {
-    color: @color-syntax-keyword;
-
-    &.import {
-      &.include,
-      &.define {
-        color: @color-syntax-c-preprocessor;
-        font-weight: bold;
-      }
+  .keyword {
+    &.control,
+    &.operator {
+      color: @color-syntax-keyword;
+    }
+    &.other.special-method {
+      color: @color-syntax-ruby-special-method;
+      font-weight: bold;
     }
   }
   /* +------------------------------------------------------------------------[4]-+ */
 
   /* +----------------------------------------------------------------------------+
-     + Meta                                                                   [5] +
+     + Punctuation                                                            [5] +
      +----------------------------------------------------------------------------+ */
-  .meta {
-    &.preprocessor {
-      &.macro {
-        color: @color-syntax-other;
+  .punctuation {
+    &.definition {
+      &.comment {
+        color: @color-syntax-comment;
       }
-      &.c.include {
+      &.string {
+        color: @color-syntax-symbol;
+      }
+      &.variable {
         color: @color-syntax-keyword;
       }
     }
-    &.block,
-    &.parens {
-      color: @color-syntax-other;
+    &.seperator,
+    &.section {
+      color: @color-syntax-symbol;
     }
   }
   /* +------------------------------------------------------------------------[5]-+ */
 
   /* +----------------------------------------------------------------------------+
-     + Punctuation                                                            [6] +
+     + Support                                                                [6] +
      +----------------------------------------------------------------------------+ */
-  .punctuation {
-    &.definition {
-      &.string.begin,
-      &.string.end,
-      &.parameters {
-        color: @color-syntax-symbol;
-      }
+  .support {
+    &.class {
+      color: @color-syntax-class;
     }
-    &.section {
-      &.block,
-      &.parens {
-        &.begin,
-        &.end {
-          color: @color-syntax-symbol;
-        }
-      }
-    }
-    &.separator {
-      &.continuation {
-        color: @color-syntax-escape;
-      }
-      &.parameters {
-        color: @color-syntax-symbol;
-      }
+    &.function.kernel {
+      color: @color-syntax-function;
     }
   }
   /* +------------------------------------------------------------------------[6]-+ */
 
   /* +----------------------------------------------------------------------------+
-     + Support                                                                [7] +
+     + String                                                                 [7] +
      +----------------------------------------------------------------------------+ */
-  .support {
-    &.type.sys-types {
-      color: @color-syntax-class;
-    }
-    &.function {
-      &.any-method,
-      &.C99 {
-        color: @color-syntax-function;
-      }
-    }
+  .string.quoted {
+    color: @color-syntax-string;
   }
   /* +------------------------------------------------------------------------[7]-+ */
 
   /* +----------------------------------------------------------------------------+
-     + Storage                                                                [8] +
+     + Symbol                                                                 [8] +
      +----------------------------------------------------------------------------+ */
-  .storage.type {
-    color: @color-syntax-class;
+  &.symbol > .punctuation {
+    color: inherit;
   }
   /* +------------------------------------------------------------------------[8]-+ */
 
   /* +----------------------------------------------------------------------------+
-     + String                                                                 [9] +
+     + Variable                                                              [9] +
      +----------------------------------------------------------------------------+ */
-  .string {
-    color: @color-syntax-string;
+  .variable {
+    color: @color-syntax-variable;
+
+    &.other {
+      &.constant {
+        color: @color-syntax-constant;
+      }
+      &.readwrite.instance {
+        color: @color-syntax-ruby-instance;
+      }
+    }
+    &.language {
+      color: @color-syntax-keyword;
+    }
   }
   /* +------------------------------------------------------------------------[9]-+ */
-
-  /* +----------------------------------------------------------------------------+
-     + Variable                                                              [10] +
-     +----------------------------------------------------------------------------+ */
-  .variable.parameter {
-    color: @color-syntax-variable;
-  }
-  /* +-----------------------------------------------------------------------[10]-+ */
 }
