--- a/styles/languages/shellscript.less
+++ b/styles/languages/shellscript.less
@@ -2,7 +2,7 @@
 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 title     Northem Dark Atom Syntax - Language ShellScript +
 project   northem-dark-atom-syntax                        +
-file      Shell.less                                      +
+file      shellscript.less                                +
 version   0.13.0                                          +
 author    Arctic Ice Studio                               +
 email     development@arcticicestudio.com                 +
