--- a/styles/languages/sql.less
+++ b/styles/languages/sql.less
@@ -1,19 +1,19 @@
 /*
-+++++++++++++++++++++++++++++++++++++++++++++++++
-title     Northem Dark Atom Syntax - Language R +
-project   northem-dark-atom-syntax              +
-file      R.less                                +
-version   0.13.0                                +
-author    Arctic Ice Studio                     +
-email     development@arcticicestudio.com       +
-website   http://arcticicestudio.com            +
-copyright Copyright (C) 2015-2016               +
-created   2015-08-14 15:42 UTC+0200             +
-modified  2016-01-31 23:35 UTC+0100             +
-+++++++++++++++++++++++++++++++++++++++++++++++++
++++++++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Language SQL +
+project   northem-dark-atom-syntax                +
+file      sql.less                                +
+version   0.13.0                                  +
+author    Arctic Ice Studio                       +
+email     development@arcticicestudio.com         +
+website   http://arcticicestudio.com              +
+copyright Copyright (C) 2015-2016                 +
+created   2016-01-27 15:36 UTC+0100               +
+modified  2016-01-31 23:41 UTC+0100               +
++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
-This file defines all language specific syntax highlighting classes for R.
+This file defines all language specific syntax highlighting classes for SQL.
 
 [Index]
   (1) Comment
@@ -21,11 +21,11 @@ This file defines all language specific syntax highlighting classes for R.
   (3) Entity
   (4) Keyword
   (5) Punctuation
-  (6) String
-  (7) Variable
+  (6) Storage
+  (7) String
 
 [Dependencies]
-  - language-foobar@^0.4.0 (https://atom.io/packages/language-foobar) by "lee-dohm " (https://atom.io/users/lee-dohm)
+  - language-sql@0.20.0 (https://atom.io/packages/language-sql) by "atom" (https://atom.io/users/atom)
 
 [Copyright]
 Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
@@ -55,7 +55,7 @@ Atom Flight Manual
 LESSCSS
   (http://lesscss.org)
 */
-.source.r {
+.source.sql {
   color: @color-syntax-other;
   /* +----------------------------------------------------------------------------+
      + Comment                                                                [1] +
@@ -68,16 +68,8 @@ LESSCSS
   /* +----------------------------------------------------------------------------+
      + Constant                                                               [2] +
      +----------------------------------------------------------------------------+ */
-  .constant {
-    &.numeric {
-      color: @color-syntax-number;
-    }
-    &.language {
-      color: @color-syntax-constant;
-    }
-    &.character.escape {
-      color: @color-syntax-regexp;
-    }
+  .constant.numeric {
+    color: @color-syntax-number;
   }
   /* +------------------------------------------------------------------------[2]-+ */
 
@@ -94,18 +86,23 @@ LESSCSS
      +----------------------------------------------------------------------------+ */
   .keyword {
     &.operator {
-      &.assignment,
-      &.arithmetic,
-      &.logical,
-      &.comparison {
+      &.comparison,
+      &.math,
+      &.concatenator {
         color: @color-syntax-operator;
       }
     }
-    &.control {
-      color: @color-syntax-keyword;
-    }
     &.other {
-      color: @color-syntax-operator;
+      color: @color-syntax-keyword;
+
+      &.DML,
+      &.create {
+        color: @color-syntax-keyword;
+      }
+      &.DDL.create.II {
+        color: @color-syntax-keyword;
+        font-style: italic;
+      }
     }
   }
   /* +------------------------------------------------------------------------[4]-+ */
@@ -113,32 +110,34 @@ LESSCSS
   /* +----------------------------------------------------------------------------+
      + Punctuation                                                            [5] +
      +----------------------------------------------------------------------------+ */
-  .punctuation {
-    &.definition.string,
-    &.section {
-      &.begin,
-      &.end {
-        color: @color-syntax-string;
-      }
+  &.punctuation.definition.string {
+    &.begin,
+    &.end {
+      color: @color-syntax-symbol;
     }
   }
   /* +------------------------------------------------------------------------[5]-+ */
 
   /* +----------------------------------------------------------------------------+
-     + String                                                                 [6] +
+     + Storage                                                                [6] +
      +----------------------------------------------------------------------------+ */
-  .string {
-    color: @color-syntax-string;
+  .storage {
+    &.type {
+      color: @color-syntax-class;
+    }
+    &.modifier {
+      color: @color-syntax-keyword;
+    }
   }
   /* +------------------------------------------------------------------------[6]-+ */
 
   /* +----------------------------------------------------------------------------+
-     + Variable                                                               [7] +
+     + String                                                                 [7] +
      +----------------------------------------------------------------------------+ */
-  .variable {
-    &.other,
-    &.parameter {
-      color: @color-syntax-variable;
+  &.string.quoted {
+    &.single,
+    &.double {
+      color: @color-syntax-string;
     }
   }
   /* +------------------------------------------------------------------------[7]-+ */
